			SWI-Prolog ChangeLog
			====================

  * FIXED: error message for illegal export list (Holger Kanwischer).

  * PORT: Check for -lexc on Tru64/DUnix when compiling for multi-threading
    (Sergey Tikhonov).

  * FIXED: make qsave work if predicates from library(lists) are
    redefined (Sergey Tikhonov).

  * FIXED: Scanning resource-file without using mmap().  (Sergey Tikhonov).

  * FIXED: Detection of mmap() for regular files (Sergey Tikhonov).

  * FIXED: Avoid calling flatten from library(lists) in toplevel.pl.
    Wouter Jansweijer.

  * FIXED: PL_open_query() on auto-loaded procedures cause data corruption.

  * FIXED: IOSTREAM Locking problem in set_stream/2.

  * FIXED: Extranous unlock in format/[2,3].  Diagnosed by Sergey Tikhonov.

  * FIXED: Proper handling of pthread error codes.

  * FIXED: listing/1 and friends (bug due to moving list predicates).
    Anjo Anjewierden.

  * ADDED: thread_statistics/3: get statistics on other threads.

  * PORT: MacOS X: check for both plain symbol and _symbol on
    call_shared_object_function/2 to deal with different versions of
    the dlcompat library.

  * FIXED: Preserve exceptions in GUI tracer (notably abort).  Kanwischer
    Holger.

VERSION 5.1.1 (Nov 16, 2002)
============================

  * FIXED: Atom-reference corruption problem for the `built-in' atoms.
    With many thanks to David Schumann who found the problem, sometimes
    trapping the assertion assert(p->references >= 0); in
    PL_unregister_atom().

  * MODIFIED: moved list-processing primitives to library(lists), where
    most Prolog systems have these.  Using the autoloader this should
    have no consequences for most applications.

  * PORT: Adapt Windows makefile suite for use with Windows 2000 and
    spaces in the destination path

  * FIXED: deadlock when loading a file with a module-name conflict.

  * FIXED: Removed size-limit on clauses of 256Kbytes compiled code.
    Spotted by Wouter Jansweijer.
